--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="container">
-            <button>321</button>
+            <center><button>Кнопка</button></center>
         </div>
     </div>
 
