update selector style

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="select-theme-bar">
         <div class="container">
             <select id="theme">
-                <option value="auto">Авто</option>
+                <option value="auto">Системная</option>
                 <option value="light">Светлая</option>
                 <option value="dark">Тёмная</option>
             </select>
