add icons and style selector

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <title>Document</title>
+    <title>darklight Theme ver.1</title>
 </head>
 
 <body>
     <div class="select-theme-bar">
         <div class="container">
             <select id="theme">
-                <option value="auto">Системная</option>
-                <option value="light">Светлая</option>
-                <option value="dark">Тёмная</option>
+                <option value="auto">Тема: &#9788; | &#9789;</option>
+                <option value="light">Светлая &#127774;</option>
+                <option value="dark">Тёмная &#127769;</option>
             </select>
         </div>
     </div>
